# FastGameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/shader-printf/: shaderprintf.h
shaders/: compute.comp  computeDense.comp  frag.frag  swapCompute.comp  vert.vert
src/: CMakeLists.txt  GameOfLife.cpp
